--- a/packages/dashboard/index.html
+++ b/packages/dashboard/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bun Queue Dashboard</title>
+    <title>HTTP Request Viewer & Analyzer</title>
+    <meta name="description" content="A powerful tool for capturing, analyzing and testing HTTP requests and responses">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
   </head>
   <body class="bg-gray-100 text-gray-900 font-sans">
